--- a/Copy_of_4_MachineLearning_Classification.ipynb
+++ b/Copy_of_4_MachineLearning_Classification.ipynb
@@ -111,7 +111,7 @@
       "metadata": {
         "id": "dz--vD5wndLj"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -127,7 +127,7 @@
       "metadata": {
         "id": "LQStkfpinjIe"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -139,7 +139,7 @@
       "metadata": {
         "id": "k-FzUTvMnuHe"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -153,7 +153,7 @@
       "metadata": {
         "id": "n3XNJea5nyJD"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -165,13 +165,13 @@
       ],
       "metadata": {
         "id": "m_mdEGNcadql",
-        "outputId": "a70b72be-3d89-4628-b4e9-a9b6695a791e",
+        "outputId": "07916429-0f09-4f6b-d653-8ac3954cb6ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -633,13 +633,13 @@
       ],
       "metadata": {
         "id": "Q1C7qSLun1HB",
-        "outputId": "e1d99dc1-e661-4964-85af-4d08c006de9c",
+        "outputId": "cb5c0fcd-96d4-4d5f-b6f9-b7a40c6ccfa4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 581
+          "height": 582
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -693,12 +693,12 @@
       ],
       "metadata": {
         "id": "RJstz8TeTfg-",
-        "outputId": "f1b6d1fa-0c63-4ac4-d199-6586fa477b1c",
+        "outputId": "7971a062-2a7e-4edc-8e94-b4f0eef70b93",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -721,7 +721,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 7
         }
       ]
     },
@@ -740,25 +740,24 @@
       ],
       "metadata": {
         "id": "6zbsojHwVkvh",
-        "outputId": "d95e4275-a6f1-4c4e-f7bf-e14cc16281b8",
+        "outputId": "c690f4a0-a9c7-46de-d0cb-5d90231a141b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(120, 4)\n",
-            "(30, 4)\n",
-            "(120,)\n",
-            "(30,)\n",
-            "[0 0 1 0 0 2 1 0 0 0 2 1 1 0 0 1 2 2 1 2 1 2 1 0 2 1 0 0 0 1 2 0 0 0 1 0 1\n",
-            " 2 0 1 2 0 2 2 1 1 2 1 0 1 2 0 0 1 1 0 2 0 0 1 1 2 1 2 2 1 0 0 2 2 0 0 0 1\n",
-            " 2 0 2 2 0 1 1 2 1 2 0 2 1 2 1 1 1 0 1 1 0 1 2 2 0 1 2 2 0 2 0 1 2 2 1 2 1\n",
-            " 1 2 2 0 1 2 0 1 2]\n"
+            "(90, 4)\n",
+            "(60, 4)\n",
+            "(90,)\n",
+            "(60,)\n",
+            "[2 0 0 0 1 0 1 2 0 1 2 0 2 2 1 1 2 1 0 1 2 0 0 1 1 0 2 0 0 1 1 2 1 2 2 1 0\n",
+            " 0 2 2 0 0 0 1 2 0 2 2 0 1 1 2 1 2 0 2 1 2 1 1 1 0 1 1 0 1 2 2 0 1 2 2 0 2\n",
+            " 0 1 2 2 1 2 1 1 2 2 0 1 2 0 1 2]\n"
           ]
         }
       ]
@@ -774,7 +773,7 @@
       "metadata": {
         "id": "Hs5pwTCbXGhG"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -786,13 +785,13 @@
       ],
       "metadata": {
         "id": "jFw8xMSxXR82",
-        "outputId": "6bf5845c-d194-4e74-9140-2b811ed55930",
+        "outputId": "49a00bc1-2162-4371-a122-df15b2ba3c84",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1220,7 +1219,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 10
         }
       ]
     },
@@ -1242,20 +1241,22 @@
       ],
       "metadata": {
         "id": "L1oNBMvIXvlw",
-        "outputId": "f333ec14-3ba1-49db-a2a8-694ce6e67d2f",
+        "outputId": "ec614844-abbd-4c9d-d92c-77deec327f26",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[1 0 2 1 1 0 1 2 1 1 2 0 0 0 0 1 2 1 1 2 0 2 0 2 2 2 2 2 0 0]\n",
-            "[1 0 2 1 1 0 1 2 1 1 2 0 0 0 0 1 2 1 1 2 0 2 0 2 2 2 2 2 0 0]\n",
-            "Accuracy: 1.0\n"
+            "[1 0 2 1 1 0 1 2 1 1 2 0 0 0 0 1 2 1 1 2 0 2 0 2 2 2 2 2 0 0 0 0 1 0 0 2 1\n",
+            " 0 0 0 2 1 1 0 0 1 2 2 1 2 1 2 1 0 2 1 0 0 0 1]\n",
+            "[1 0 2 1 1 0 1 2 1 1 2 0 0 0 0 1 2 1 1 2 0 2 0 2 2 2 2 2 0 0 0 0 1 0 0 2 1\n",
+            " 0 0 0 2 1 1 0 0 1 1 2 1 2 1 2 1 0 2 1 0 0 0 1]\n",
+            "Accuracy: 0.9833333333333333\n"
           ]
         }
       ]
